[Refactor] completely changed the website ! now uses modern vue js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <title>Page loading...</title>
-        
-        <script type="text/javascript">
-            function redirect() {
-                window.location.href = "web/frontalController.php";
-            }
-        </script>
-    </head>
-    <body onload="redirect()"></body>
+<head>
+    <meta charset="UTF-8"/>
+    <link href="/icon.png" rel="icon" type="image/png"/>
+
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="description" content="portfolio raphaël izoret CV professionnal">
+
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
+          rel="stylesheet">
+</head>
+<body>
+<div id="app"></div>
+<script src="/src/main.ts" type="module"></script>
+</body>
 </html>
