--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="/icon.png" rel="icon" type="image/png"/>
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <meta name="description" content="portfolio raphaël izoret CV professionnal">
+    <meta name="description" content="Portfolio professionnel de Raphaël Izoret">
 
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
