--- a/404.html
+++ b/404.html
@@ -1,35 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
-    <script>
-      (function () {
-        const base = '/Portfolio';
-        let path = location.pathname;
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <link href="/icon.png" rel="icon" type="image/png"/>
 
-        // Avoid duplicate base
-        if (path.startsWith(base)) {
-          path = path.slice(base.length);
-        }
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="description" content="Portfolio professionnel de Raphaël Izoret">
 
-        // Clean up leading slashes
-        path = path.replace(/^\/+/, '');
-
-        const search = location.search || '';
-        const hash = location.hash || '';
-
-        const target = `${base}/${path}${search}${hash}`;
-
-        // Only redirect if needed
-        if (location.pathname !== target) {
-          location.replace(target);
-        }
-      })();
-    </script>
-  </head>
-  <body>
-    Redirecting...
-  </body>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
+          rel="stylesheet">
+</head>
+<body>
+<div id="app"></div>
+<script src="/src/ts/main.ts" type="module"></script>
+</body>
 </html>
-
